# collections

./: auto_typer.py
1Cpp_Stuf/: 4.cpp  CMakeLists.txt  Vasily.cpp  bigsub.cpp  haybale.cpp  lol.c  moo.cpp  smallpt.cpp  tester.cpp
1Cpp_Stuf/vulkan_test/GSTRESS/: cr.sh  main.cpp  stress.comp
1Cpp_Stuf/vulkan_test/HSTRESS/: cr.sh  hybrid_stress.comp  main.cpp
1Cpp_Stuf/vulkan_test/Memstress/: CMakeLists.txt  cr.sh  main.cpp  memory_stress.comp
1Cpp_Stuf/vulkan_test/VSTRESS/: cr.sh  main.cpp  shader.frag  shader.vert
1Cpp_Stuf/vulkan_test/VStressV2/: CMakeLists.txt  cr.sh  main.cpp  noise_generator.comp  shader.frag  shader.vert
1Cpp_Stuf/vulkan_test/Vprimes2/: CMakeLists.txt  main.cpp  primality.comp
1Cpp_Stuf/vulkan_test/Vsieve/: CMakeLists.txt  cr.sh  main.cpp  sieve.comp
1Cpp_Stuf/vulkan_test/VulkanPrimes/: compile.sh  c⁄r.txt  miller_rabin.comp  vulkan_primality_tester.cpp
1Html_Stuf/: cool.html  index.html
1Java_Stuf/: StampPainting.java
1Java_Stuf/Battleship/: Battleship.java  README.txt
1Python_Stuf/: 1.py  2.py  3.py  4.py  5.py  ket.py  snek.py  stdev.py
1Python_Stuf/The-Planet-Sine/: main.py
1Python_Stuf/The-Planet-Sine/programs/: fragment.glsl
